HTML Layout was created
Made some container to represent the idea of the resume.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>My Resume</title>
+  <title>Adnan Chowdhury's Resume</title>
 
   <link rel="stylesheet" href="css/index.css">
 
@@ -13,7 +13,35 @@
   <![endif]-->
 </head>
 
-<body>
-  <h1>My Resume</h1>
-</body>
+  <body>
+    <header>
+      <nav>
+        <a href="index.html">Home</a>
+        <a href="https://adnanwebdev.github.io/">Portfolio</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
+      </nav>
+      <img src="#" alt="Profile Pic">
+      <div class="intro">
+        <h2>Adnan Chowdhury</h2>
+        <p>I am currently enrolled in Lambdo School, specializing in Full Stack Web Development and
+          I will be graduating by January 2020. Reach out to me for any web development projects & consulations.
+        </p>
+      </div>
+    </header>
+    <section>
+      <h1>Skills</h1>
+      <div class="skills"></div>
+      <div class="skills"></div>
+      <div class="skills"></div>
+      <div class="skills"></div>
+      <div class="skills"></div>
+    </section>
+    <section>
+      <h1>Work History</h1>
+    </section>
+    <footer>
+      <h1>Contact</h1>
+    </footer>
+  </body>
 </html>
