--- a/index.html
+++ b/index.html
@@ -21,24 +21,26 @@
         <a href="#">About</a>
         <a href="#">Contact</a>
       </nav>
-      <img src="#" alt="Profile Pic">
+      <img src="images/profilepic.jpg" alt="Profile Pic">
       <div class="intro">
         <h2>Adnan Chowdhury</h2>
-        <p>I am currently enrolled in Lambdo School, specializing in Full Stack Web Development and
+        <p>I am currently enrolled in Lambda School, specializing in Full Stack Web Development and
           I will be graduating by January 2020. Reach out to me for any web development projects & consulations.
         </p>
       </div>
     </header>
-    <section>
+    <section class="skills">
       <h1>Skills</h1>
-      <div class="skills"></div>
-      <div class="skills"></div>
-      <div class="skills"></div>
-      <div class="skills"></div>
-      <div class="skills"></div>
+      <div class="skillpoint"><h3>HTML & CSS</h3></div>
+      <div class="skillpoint"><h3>JavaScript</h3></div>
+      <div class="skillpoint"><h3>React</h3></div>
+      <div class="skillpoint"><h3>Data Structures in C++</h3></div>
     </section>
-    <section>
+    <section class="workhistory">
       <h1>Work History</h1>
+      <div class="job"><h3>Kroger</h3></div>
+      <div class="job"><h3>Frank Theatre</h3></div>
+      <div class="job"><h3>Virginia Tech Dining</h3></div>
     </section>
     <footer>
       <h1>Contact</h1>
