--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>Adnan Chowdhury's Resume</title>
 
@@ -31,19 +32,36 @@
     </header>
     <section class="skills">
       <h1>Skills</h1>
-      <div class="skillpoint"><h3>HTML & CSS</h3></div>
-      <div class="skillpoint"><h3>JavaScript</h3></div>
-      <div class="skillpoint"><h3>React</h3></div>
-      <div class="skillpoint"><h3>Data Structures in C++</h3></div>
+      <div class="skillpoint"><h3>HTML & CSS</h3>
+        <p>Understanding of generic markup and presetentable styling solutions</p>
+      </div>
+      <div class="skillpoint"><h3>JavaScript</h3>
+        <p>Development of frontend and backend solutions </p>
+      </div>
+      <div class="skillpoint"><h3>React</h3>
+        <p>Coming soon</p>
+      </div>
+      <div class="skillpoint"><h3>Data Structures in C++</h3>
+        <p>Organizing data with suitable data structures to provide high performance solutions</p>
+      </div>
     </section>
     <section class="workhistory">
       <h1>Work History</h1>
-      <div class="job"><h3>Kroger</h3></div>
-      <div class="job"><h3>Frank Theatre</h3></div>
-      <div class="job"><h3>Virginia Tech Dining</h3></div>
+      <div class="job"><h3>Kroger</h3>
+        <p>Bartender <br>2018-2019</p>
+      </div>
+      <div class="job"><h3>Frank Theatre</h3>
+        <p>Line Cook <br>2016-2018</p>
+      </div>
+      <div class="job"><h3>Virginia Tech Dining</h3>
+        <p>Food Service Worker <br>2013-2016</p>
+      </div>
     </section>
     <footer>
       <h1>Contact</h1>
+      <div>
+        <p>Adnan Chowdhury <br>Murfreesboro, Tennessee <br>Email:adnan.chowdhury@outlook.com</p>
+      </div>
     </footer>
   </body>
 </html>
